<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_category_server_title">
        <EditTextPreference
            android:defaultValue="@string/pref_host"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_server_address_title"
            android:key="@string/pref_server_address_key"
            android:id="@+id/server_address_pref" />
        <EditTextPreference
            android:defaultValue="60611"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_server_port_title"
            android:key="@string/pref_server_port_key"
            android:numeric="integer"
            android:id="@+id/server_port_pref" />
        <EditTextPreference
            android:defaultValue="1000"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_server_timeout_title"
            android:key="@string/pref_server_timeout_key"
            android:numeric="integer" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_info_title">
        <Preference android:title="@string/pref_information_title">
        <intent
            android:targetPackage="com.rosel.roselsalesapp"
            android:targetClass="com.rosel.roselsalesapp.activity.InformationActivity"/>
    </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/database">
        <Preference android:title="@string/database_settings">
        <intent
            android:targetPackage="com.rosel.roselsalesapp"
            android:targetClass="com.rosel.roselsalesapp.activity.DatabaseActivity"/>
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>