<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/save"
        android:id="@+id/save_order_detail_menu_item"
        android:icon="@drawable/ic_save_black_24dp"
        tools:ignore="AppCompatResource"
        android:showAsAction="ifRoom"
        android:visible="false" />
    <item android:title="@string/clear"
        android:id="@+id/clear_order_detail_menu_item"
        android:showAsAction="ifRoom"
        tools:ignore="AppCompatResource"
        android:icon="@drawable/ic_clear_black_24dp"
        android:visible="false" />
    <item android:title="@string/delete"
        android:id="@+id/delete_order_detail_menu_item"
        android:icon="@drawable/ic_delete_sweep_black_24dp"
        android:visible="false" />
    <item android:title="@string/add_comment"
        android:id="@+id/add_comment_order_detail_menu_item"
        android:icon="@drawable/ic_chat_bubble_outline_black_24dp"
        android:visible="false" />
    <item
        android:id="@+id/pick_order_detail_menu_item"
        android:title="@string/pick"
        app:showAsAction="never" />
</menu>