<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:id="@+id/activity_create_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:verticalScrollbarPosition="right">

        <TextView
            android:id="@+id/client_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/client_label"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/client_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_toEndOf="@+id/client_text_view"
            android:layout_toRightOf="@+id/client_text_view"
            android:ems="15" />

        <TextView
            android:id="@+id/order_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/client_text_view"
            android:layout_margin="5dp"
            android:text="@string/address"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_address_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/client_name_view"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/order_address_label"
            android:layout_toRightOf="@+id/order_address_label"
            android:height="35dp"
            android:clickable="true"
            android:ems="18"
            android:text="@string/choose_address" />

        <Button
            android:id="@+id/choose_client_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/client_name_view"
            android:layout_toRightOf="@+id/client_name_view"
            android:background="@android:drawable/ic_menu_search"
            android:minHeight="24dp"
            android:minWidth="24dp"
            android:onClick="onClickChooseClient"
            android:textSize="14sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/order_ship_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_address_textview"
            android:layout_margin="5dp"
            android:text="@string/ship_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/order_ship_date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_address_textview"
            android:layout_margin="5dp"
            android:layout_toEndOf="@+id/order_ship_date_label"
            android:layout_toRightOf="@+id/order_ship_date_label"
            android:text="@string/choose_date" />

        <TextView
            android:id="@+id/order_comment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_ship_date_label"
            android:layout_margin="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/comment"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/comment_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/order_comment_label"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:maxLines="1"
            android:textSize="14sp" />


        <TableLayout
            android:id="@+id/order_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/comment_text_view"
            android:background="@android:color/black"
            android:shrinkColumns="1"
            android:stretchColumns="3,4">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/n"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/product_label"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/quantity_label"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/price_label"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="1dp"
                    android:background="@android:color/background_light"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="@string/total_amount_label"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>


        <TextView
            android:id="@+id/order_sum_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/order_table"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/total_sum" />

        <TextView
            android:id="@+id/order_sum_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/order_sum_label"
            android:layout_alignBottom="@+id/order_sum_label"
            android:layout_marginLeft="11dp"
            android:layout_marginStart="11dp"
            android:layout_toEndOf="@+id/order_sum_label"
            android:layout_toRightOf="@+id/order_sum_label"/>

        <Button
            android:id="@+id/addRowButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/order_table"
            android:layout_marginBottom="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/ic_add_box_black_48dp"
            android:maxHeight="0dp"
            android:minHeight="24dp"
            android:minWidth="24dp"
            android:onClick="onClickAddRowButton" />

    </RelativeLayout>
</ScrollView>
